--- a/PCL2.Neo/Controls/MyButton.axaml
+++ b/PCL2.Neo/Controls/MyButton.axaml
@@ -4,12 +4,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Design.PreviewWith>
         <Border Background="DimGray">
-            <controls:MyButton Margin="10" />
+            <controls:MyButton Margin="10" Text="114514" />
         </Border>
     </Design.PreviewWith>
 
     <Style Selector="controls|MyButton">
-        <Setter Property="Text" Value="Button" />
         <Setter Property="Foreground" Value="{DynamicResource ColorBrush1}" />
         <Setter Property="Background" Value="{DynamicResource ColorBrushHalfWhite}" />
         <Setter Property="RealRenderTransform">
@@ -34,6 +33,7 @@
                             FontSize="13"
                             Foreground="{Binding $parent[Border].BorderBrush}"
                             HorizontalAlignment="Center"
+                            Inlines="{TemplateBinding Inlines}"
                             IsHitTestVisible="False"
                             Padding="{TemplateBinding TextPadding}"
                             RenderTransformOrigin="0.5,0.5"
