--- a/PCL2.Neo/Controls/MyCard.axaml
+++ b/PCL2.Neo/Controls/MyCard.axaml
@@ -3,13 +3,20 @@
     xmlns:controls="using:PCL2.Neo.Controls"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Design.PreviewWith>
-        <controls:MyCard />
+        <Border Background="DarkCyan" Padding="20">
+            <controls:MyCard />
+        </Border>
     </Design.PreviewWith>
 
     <Style Selector="controls|MyCard">
+        <Setter Property="Background" Value="#cdffffff" />
         <Setter Property="Template">
             <ControlTemplate>
-                <TextBlock Text="1" />
+                <Border Background="{TemplateBinding Background}" CornerRadius="6">
+                    <Grid Name="MainGrid">
+                        <TextBlock Padding="20" Text="114514" />
+                    </Grid>
+                </Border>
             </ControlTemplate>
         </Setter>
     </Style>
