--- a/PCL2.Neo/Views/MainWindow.axaml
+++ b/PCL2.Neo/Views/MainWindow.axaml
@@ -193,44 +193,55 @@
                     </Border>
 
                     <Grid Grid.Row="1" Name="PanMain">
-                        <StackPanel Orientation="Vertical">
-                            <pc:MyButton
-                                ColorType="Normal"
-                                Height="50"
-                                Margin="10"
-                                Text="普通按钮" />
-                            <pc:MyButton
-                                Click="Button_OnClick"
-                                ColorType="Highlight"
-                                Height="50"
-                                Margin="10"
-                                Text="高亮按钮" />
-                            <pc:MyButton
-                                Click="Button2_OnClick"
-                                ColorType="Red"
-                                Height="50"
-                                Margin="10"
-                                Text="红色按钮" />
-                            <pc:MyButton Height="50" Margin="10">
-                                <Run Text="PCL2.Neo 也支持了" />
-                                <Run
-                                    FontWeight="Bold"
-                                    Foreground="#ff4c4c"
-                                    Text="Inline 富文本！" />
-                                <LineBreak />
-                                <Run Text="为什么这里有个" />
-                                <InlineUIContainer>
-                                    <Image Source="avares://PCL2.Neo/Assets/Icon.ico" Width="20" />
-                                </InlineUIContainer>
-                                <Run Text="图标？" />
-                            </pc:MyButton>
-                            <pc:MyLoading
-                                Height="150"
-                                Name="TestLoading"
-                                Width="150" />
-                        </StackPanel>
+                        <ScrollViewer>
+                            <StackPanel Orientation="Vertical">
+                                <pc:MyButton
+                                    ColorType="Normal"
+                                    Height="50"
+                                    Margin="10"
+                                    Text="普通按钮" />
+                                <pc:MyButton
+                                    Click="Button_OnClick"
+                                    ColorType="Highlight"
+                                    Height="50"
+                                    Margin="10"
+                                    Text="高亮按钮" />
+                                <pc:MyButton
+                                    Click="Button2_OnClick"
+                                    ColorType="Red"
+                                    Height="50"
+                                    Margin="10"
+                                    Text="红色按钮" />
+                                <pc:MyButton Height="50" Margin="10">
+                                    <Run Text="PCL2.Neo 也支持了" />
+                                    <Run
+                                        FontWeight="Bold"
+                                        Foreground="#ff4c4c"
+                                        Text="Inline 富文本！" />
+                                    <LineBreak />
+                                    <Run Text="为什么这里有个" />
+                                    <InlineUIContainer>
+                                        <Image Source="avares://PCL2.Neo/Assets/Icon.ico" Width="20" />
+                                    </InlineUIContainer>
+                                    <Run Text="图标？" />
+                                </pc:MyButton>
+                                <pc:MyLoading
+                                    Height="150"
+                                    Name="TestLoading"
+                                    Width="150" />
+                                <pc:MyButton Height="50" Margin="10" />
+                                <pc:MyButton Height="50" Margin="10" />
+                            </StackPanel>
+                        </ScrollViewer>
                     </Grid>
 
+                    <Grid
+                        Background="#00000000"
+                        Grid.Row="0"
+                        Grid.RowSpan="2"
+                        IsVisible="False"
+                        Name="PanMsg"
+                        ZIndex="2" />
                 </Grid>
             </Border>
         </Border>
